force-app/main/default/objects/Credit_Summary__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Credit Summaries</relationshipLabel>
    <relationshipName>Credit_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>