force-app/main/default/objects/Credit_Summary__c/fields/Credit_Score_Override_Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score_Override_Other_Reason__c</fullName>
    <label>Credit Score Override Other Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>