force-app/main/default/objects/Credit_Summary__c/fields/Credit_Score_Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score_Override_Reason__c</fullName>
    <label>Credit Score Override Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Level of Net Worth</fullName>
            </value>
            <value>
                <fullName>High Level of Liquidity</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>