force-app/main/default/objects/Credit_Summary__c/fields/Override_Min_Credit_Score_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Override_Min_Credit_Score_Requirement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Min Credit Score Requirement</label>
    <type>Checkbox</type>
</CustomField>